feature: #3 issue cadastro de insumos
criação do serviço de cadastro e gerenciamento de insumos
