# adapters/api/routes/ong.js
@@ -1,15 +1,17 @@
 const controller = require('../../controllers/ong');
 const validators = require('../validators/ong');
 
-const invalidRequestReply = (request, reply, errors) => reply.status(400).json({
-  method: request.method,
-  status: reply.statusCode,
-  error: errors,
-});
+const invalidRequestReply = (request, reply, errors) =>
+  reply.status(400).json({
+    method: request.method,
+    status: reply.statusCode,
+    error: errors,
+  });
 
 module.exports = (app) => {
   app.post('/ong', validators.registerValidator(), async (request, reply) => {
-    /*  #swagger.parameters['post ong object'] = {
+    /*  #swagger.tags = ['Ongs']
+        #swagger.parameters['post ong object'] = {
             in: 'body',
             description: "New ong values",
             schema: {
@@ -24,21 +26,28 @@ module.exports = (app) => {
       return invalidRequestReply(request, reply, errors);
     }
     const response = await controller.post(request, reply);
-    return reply.json(response);
+    return reply.status(200).json(response);
   });
 
   app.get('/ong', async (request, reply) => {
+    //  #swagger.tags = ['Ongs']
     const response = await controller.get(request, reply);
-    return reply.json(response);
+    return reply.status(200).json(response);
   });
 
   app.get('/ong/:id', async (request, reply) => {
-    const response = await controller.getById(request.params.id, request, reply);
-    return reply.json(response);
+    //  #swagger.tags = ['Ongs']
+    const response = await controller.getById(
+      request.params.id,
+      request,
+      reply,
+    );
+    return reply.status(200).json(response);
   });
 
   app.put('/ong/:id', validators.updateValidator(), async (request, reply) => {
-    /*  #swagger.parameters['put ong object'] = {
+    /*  #swagger.tags = ['Ongs']
+        #swagger.parameters['put ong object'] = {
             in: 'body',
             description: "New ong values",
             schema: {
@@ -53,11 +62,12 @@ module.exports = (app) => {
       return invalidRequestReply(request, reply, errors);
     }
     const response = await controller.put(request.params.id, request, reply);
-    return reply.json(response);
+    return reply.status(200).json(response);
   });
 
   app.patch('/ong/:id', validators.patchValidator(), async (request, reply) => {
-    /*  #swagger.parameters['patch ong object'] = {
+    /*  #swagger.tags = ['Ongs']
+        #swagger.parameters['patch ong object'] = {
             in: 'body',
             description: "New ong values",
             schema: {
@@ -72,11 +82,12 @@ module.exports = (app) => {
       return invalidRequestReply(request, reply, errors);
     }
     const response = await controller.patch(request.params.id, request, reply);
-    return reply.json(response);
+    return reply.status(200).json(response);
   });
 
   app.delete('/ong/:id', async (request, reply) => {
+    //  #swagger.tags = ['Ongs']
     const response = await controller.delete(request.params.id, request, reply);
-    return reply.json(response);
+    return reply.status(200).json(response);
   });
 };
